# Rubik

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  parsing.py  pyproject.toml  scene_cube.py  sources.md
cube/: controls.py  cube.py  moves.py
srcs/: bfs.py  controls.py  cube.py  cubie.py  ida.py  main.py  moves.py  parsing.py  rubik.py  test.py  ui.py  utils.py
