[project]
name = "rubik"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flake8>=7.3.0",
    "ursina>=8.3.0",
]

[project.scripts]
rubik = "srcs.main:main"
flake8 = "flake8.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["srcs"]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]
