[project]
name = "rubik"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "flake8>=7.3.0",
    "numpy>=2.4.6",
    "tqdm>=4.67.3",
    "ursina>=8.3.0",
]

[project.scripts]
rubik = "srcs.main:main"
flake8 = "flake8.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["srcs"]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
]
